Added a function to visualize different noises on images in visualization.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "id": "initial_id"
@@ -186,39 +186,37 @@
    "id": "c071f70a",
    "metadata": {},
    "source": [
-    "#### Visulization of different noises on the 3 images:\n",
+    "#### Visualization of different noises on the 3 images:\n",
     "\n",
     "The cell below shows each of noises with different levels of intensities, applied on all of the images."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0083d98b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'visualization' has no attribute 'plot_original_noisy_images'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m intensities \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlow\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedium\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhigh\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m intensity \u001b[38;5;129;01min\u001b[39;00m intensities:\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mvis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot_original_noisy_images\u001b[49m(dataframes, noise_types, intensity)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'visualization' has no attribute 'plot_original_noisy_images'"
+     ]
+    }
+   ],
    "source": [
     "# Define the noise types to display\n",
     "\n",
-    "noise_types = ['Gaussian Noise (medium)', 'Salt and Pepper Noise (medium)']\n",
+    "noise_types = ['Gaussian Noise', 'Salt and Pepper Noise']\n",
+    "intensities = ['low', 'medium','high']\n",
     "\n",
-    "# Iterate over all images\n",
-    "for i, image in enumerate(list_of_images):\n",
-    "    fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
-    "    \n",
-    "    # Display the original image\n",
-    "    axes[0].imshow(image, cmap='gray')\n",
-    "    axes[0].set_title('Original')\n",
-    "    axes[0].axis('off')\n",
-    "    \n",
-    "    # Display the noisy variants\n",
-    "    for j, noise_type in enumerate(noise_types):\n",
-    "        noisy_image = dataframes[i].loc[noise_type, 'Image']\n",
-    "        axes[j + 1].imshow(noisy_image, cmap='gray')\n",
-    "        axes[j + 1].set_title(noise_type)\n",
-    "        axes[j + 1].axis('off')\n",
-    "    \n",
-    "    plt.show()"
+    "for intensity in intensities:\n",
+    "    vis.plot_original_noisy_images(dataframes, noise_types, intensity)"
    ]
   },
   {
